<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/solfege_fragment"
    android:layout_height="match_parent"
    tools:context=".SoundActivity"

    android:orientation="vertical"
    >

    <TextView android:text="@string/welcome"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/blue"
        android:textSize="32dp"
        android:gravity="center"
        android:layout_marginTop="20dp"

        />
    <TextView android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_play"
        android:gravity="center"
        android:textSize="13dp"
        android:background="@color/light_purple"
        android:paddingTop="5dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/header"/>

    <!-- Layout for circular buttons -->
    <LinearLayout android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_below="@+id/description"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/button_Do"
            style="@style/ButtonStyle"
            android:text = "@string/button_do"
            />
        <Button
            android:id="@+id/button_re"
            style="@style/ButtonStyle"
            android:text="@string/button_re"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/button_mi"
            style="@style/ButtonStyle"
            android:text="@string/button_mi"
            />
    </LinearLayout>
    <LinearLayout android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row1"
        android:gravity="center_horizontal"
        android:padding="5dp">
        <Button
            android:id="@+id/button_fa"
            style="@style/ButtonStyle"
            android:text="@string/button_fa"
            />
        <Button
            android:id="@+id/play"
            android:background="@drawable/button_purple"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:text="Play"/>
        <Button
            android:id="@+id/button_sol"
            style="@style/ButtonStyle"
            android:text="@string/button_sol"
            /></LinearLayout>

    <LinearLayout android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_below="@+id/row2"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp">
        <Button
            android:id="@+id/button_la"
            style="@style/ButtonStyle"
            android:text="@string/button_la"
            />
        <Button
            android:id="@+id/button_ti"
            style="@style/ButtonStyle"
            android:text="@string/button_ti"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/button_do_upper"
            style="@style/ButtonStyle"
            android:text="@string/button_do_upper"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/array"
        android:layout_margin="5dp"
        android:layout_below="@id/row3"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
    </LinearLayout>
    <LinearLayout
        android:layout_above="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/button_submit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@color/blue"
            android:text="@string/submit"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_purple"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="16dp"
            android:text="@string/score"
            android:paddingRight="5dp"/>
        <TextView android:id="@+id/score_number"
            android:layout_width="wrap_content"
            android:textSize="16dp"
            android:layout_height="match_parent"
            android:text="@string/zero"/>
    </LinearLayout>
</RelativeLayout>
